--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -7,7 +7,13 @@
     justify-content: center;
     border: 1px solid black;
     margin: 0 7.5px 15px;
-  
+    background-position: center;
+    background-size: cover;
+    
+    &.large {
+      height: 380px;
+      }
+
     &:first-child {
       margin-right: 7.5px;
     }
@@ -24,6 +30,7 @@
       align-items: center;
       justify-content: center;
       border: 1px solid black;
+      background-color: antiquewhite ;
   
       .title {
         font-weight: bold;
