--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -30,18 +30,21 @@
       align-items: center;
       justify-content: center;
       border: 1px solid black;
-      background-color: antiquewhite ;
+      background-color: white;
+      opacity: 0.7;
   
       .title {
         font-weight: bold;
         margin-bottom: 6px;
         font-size: 22px;
         color: #4a4a4a;
+        font-family: 'Open Sans Condensed', sans-serif;
       }
   
       .subtitle {
         font-weight: lighter;
         font-size: 16px;
+        font-family: 'Open Sans Condensed', sans-serif;
       }
     }
   }
