corrected styling and font

--- a/src/components/collection-item/collection-item.style.scss
+++ b/src/components/collection-item/collection-item.style.scss
@@ -23,10 +23,12 @@
       .name {
         width: 90%;
         margin-bottom: 15px;
+        font-family: 'Open Sans Condensed', sans-serif;
       }
   
       .price {
         width: 10%;
+        font-family: 'Open Sans Condensed', sans-serif;
       }
     }
   }
